Add support for GraphQL schema query field names and result type customizations