@@ -72,7 +72,9 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -108,10 +110,21 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
 
     private Map<Class<?>, GraphQLOutputType> classCache = new HashMap<>();
     private Map<EntityType<?>, GraphQLObjectType> entityCache = new HashMap<>();
+    private Map<String, EntityType<?>> entityTypeMap = new ConcurrentHashMap<>();
     private Map<ManagedType<?>, GraphQLInputObjectType> inputObjectCache = new HashMap<>();
     private Map<ManagedType<?>, GraphQLInputObjectType> subqueryInputObjectCache = new HashMap<>();
     private Map<Class<?>, GraphQLObjectType> embeddableOutputCache = new HashMap<>();
     private Map<Class<?>, GraphQLInputObjectType> embeddableInputCache = new HashMap<>();
+    private Function<String, String> queryByIdFieldNameCustomizer = Function.identity();
+    private Function<String, String> queryAllFieldNameCustomizer = Function.identity();
+    private Function<String, String> queryResultTypeNameCustomizer = Function.identity();
+    private Function<String, String> queryTypeNameCustomizer = name -> name.concat("Query");
+    private Function<String, String> queryWhereArgumentTypeNameCustomizer = name -> name.concat("CriteriaExpression");
+    private Function<String, String> queryEmbeddableTypeNameCustomizer = it -> it.concat("EmbeddableType");
+    private Function<String, String> subqueryArgumentTypeNameCustomizer = name -> name.concat("SubqueryCriteriaExpression");
+    private Function<String, String> queryWhereInputTypeNameCustomizer = name -> name.concat("RelationCriteriaExpression");
+    private Function<String, String> singularize = namingStrategy::singularize;
+    private Function<String, String> pluralize = namingStrategy::pluralize;
 
     private static final Logger log = LoggerFactory.getLogger(GraphQLJpaSchemaBuilder.class);
 
@@ -140,9 +153,8 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
 
     private final List<String> entityPaths = new ArrayList<>();
 
-    private Supplier<BatchLoaderRegistry> batchLoadersRegistry = () -> {
-        return BatchLoaderRegistry.getInstance();
-    };
+    private final Supplier<BatchLoaderRegistry> batchLoadersRegistry = BatchLoaderRegistry::getInstance;
+    private final Function<String, EntityType<?>> entityObjectTypeResolver = entityTypeMap::get;
 
     public GraphQLJpaSchemaBuilder(EntityManager entityManager) {
         this.entityManager = entityManager;
@@ -157,7 +169,7 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
      */
     @Override
     public GraphQLSchema build() {
-        scalars.forEach((javaType, scalarType) -> JavaScalars.register(javaType, scalarType));
+        scalars.forEach(JavaScalars::register);
 
         GraphQLSchema.Builder schema = GraphQLSchema.newSchema().query(getQueryType());
 
@@ -168,6 +180,8 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
         if (enableRelay) {
             schema.additionalType(Relay.pageInfoType);
         }
+
+        entityCache.forEach((entity, type) -> entityTypeMap.put(type.getName(), entity));
 
         return schema.build();
     }
@@ -181,7 +195,7 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
     private GraphQLObjectType getQueryType() {
         GraphQLObjectType.Builder queryType = GraphQLObjectType
             .newObject()
-            .name(this.name + "Query")
+            .name(queryTypeNameCustomizer.apply(this.name))
             .description(this.description);
 
         queryType.fields(
@@ -191,7 +205,7 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
                 .stream()
                 .filter(this::isNotIgnored)
                 .map(this::getQueryFieldByIdDefinition)
-                .collect(Collectors.toList())
+                .toList()
         );
 
         queryType.fields(
@@ -201,7 +215,7 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
                 .stream()
                 .filter(this::isNotIgnored)
                 .map(this::getQueryFieldSelectDefinition)
-                .collect(Collectors.toList())
+                .toList()
         );
 
         return queryType.build();
@@ -227,12 +241,13 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
     }
 
     private GraphQLFieldDefinition getQueryFieldByIdDefinition(EntityType<?> entityType) {
-        GraphQLObjectType entityObjectType = getObjectType(entityType);
+        GraphQLObjectType entityObjectType = getEntityObjectType(entityType);
 
         GraphQLJpaQueryFactory queryFactory = GraphQLJpaQueryFactory
             .builder()
             .withEntityManager(entityManager)
             .withEntityType(entityType)
+            .withEntityObjectTypeResolver(entityObjectTypeResolver)
             .withEntityObjectType(entityObjectType)
             .withSelectNodeName(entityObjectType.getName())
             .withToManyDefaultOptional(toManyDefaultOptional)
@@ -241,7 +256,8 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
             .build();
 
         DataFetcher<Object> dataFetcher = GraphQLJpaSimpleDataFetcher.builder().withQueryFactory(queryFactory).build();
-        String fieldName = entityType.getName();
+
+        String fieldName = singularize.andThen(queryByIdFieldNameCustomizer).apply(entityType.getName());
 
         return GraphQLFieldDefinition
             .newFieldDefinition()
@@ -269,7 +285,7 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
     }
 
     private GraphQLFieldDefinition getQueryFieldSelectDefinition(EntityType<?> entityType) {
-        final GraphQLObjectType entityObjectType = getObjectType(entityType);
+        final GraphQLObjectType entityObjectType = getEntityObjectType(entityType);
         final GraphQLObjectType outputType = enableRelay
             ? getConnectionType(entityObjectType)
             : getSelectType(entityType);
@@ -280,6 +296,7 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
             .builder()
             .withEntityManager(entityManager)
             .withEntityType(entityType)
+            .withEntityObjectTypeResolver(entityObjectTypeResolver)
             .withEntityObjectType(entityObjectType)
             .withSelectNodeName(enableRelay ? NODE : QUERY_SELECT_PARAM_NAME)
             .withToManyDefaultOptional(toManyDefaultOptional)
@@ -309,7 +326,7 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
                     .build();
         }
 
-        String fieldName = namingStrategy.pluralize(entityType.getName());
+        String fieldName = pluralize.andThen(queryAllFieldNameCustomizer).apply(entityType.getName());
 
         GraphQLFieldDefinition.Builder fieldDefinition = GraphQLFieldDefinition
             .newFieldDefinition()
@@ -342,12 +359,17 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
         return fieldDefinition.build();
     }
 
+    private String resolveSelectTypeName(EntityType<?> entityType) {
+        return pluralize.andThen(queryResultTypeNameCustomizer).apply(entityType.getName());
+    }
+
     private GraphQLObjectType getSelectType(EntityType<?> entityType) {
-        GraphQLObjectType selectObjectType = getObjectType(entityType);
+        final GraphQLObjectType selectObjectType = getEntityObjectType(entityType);
+        final var selectTypeName = resolveSelectTypeName(entityType);
 
         GraphQLObjectType selectPagedResultType = GraphQLObjectType
             .newObject()
-            .name(namingStrategy.pluralize(entityType.getName()))
+            .name(selectTypeName)
             .description(
                 "Query response wrapper object for " +
                 entityType.getName() +
@@ -383,12 +405,13 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
     }
 
     private GraphQLFieldDefinition getQueryFieldStreamDefinition(EntityType<?> entityType) {
-        GraphQLObjectType entityObjectType = getObjectType(entityType);
+        GraphQLObjectType entityObjectType = getEntityObjectType(entityType);
 
         GraphQLJpaQueryFactory queryFactory = GraphQLJpaQueryFactory
             .builder()
             .withEntityManager(entityManager)
             .withEntityType(entityType)
+            .withEntityObjectTypeResolver(entityObjectTypeResolver)
             .withEntityObjectType(entityObjectType)
             .withSelectNodeName(SELECT_DISTINCT_PARAM_NAME)
             .withToManyDefaultOptional(toManyDefaultOptional)
@@ -398,10 +421,11 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
             .build();
 
         DataFetcher<Object> dataFetcher = GraphQLJpaStreamDataFetcher.builder().withQueryFactory(queryFactory).build();
+        var fieldName = pluralize.andThen(queryResultTypeNameCustomizer).apply(entityType.getName());
 
         GraphQLFieldDefinition.Builder fieldDefinition = GraphQLFieldDefinition
             .newFieldDefinition()
-            .name(namingStrategy.pluralize(entityType.getName()))
+            .name(fieldName)
             .description(
                 "Query request wrapper for " +
                 entityType.getName() +
@@ -520,15 +544,15 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
     }
 
     private String resolveWhereArgumentTypeName(ManagedType<?> managedType) {
-        String typeName = resolveTypeName(managedType);
+        String typeName = resolveManagedTypeName(managedType);
 
-        return namingStrategy.pluralize(typeName) + "CriteriaExpression";
+        return pluralize.andThen(queryWhereArgumentTypeNameCustomizer).apply(typeName);
     }
 
     private String resolveSubqueryArgumentTypeName(ManagedType<?> managedType) {
-        String typeName = resolveTypeName(managedType);
+        String typeName = resolveManagedTypeName(managedType);
 
-        return namingStrategy.pluralize(typeName) + "SubqueryCriteriaExpression";
+        return pluralize.andThen(subqueryArgumentTypeNameCustomizer).apply(typeName);
     }
 
     private GraphQLInputObjectType getSubqueryInputType(ManagedType<?> managedType) {
@@ -588,13 +612,13 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
         return whereInputObject.build();
     }
 
-    private String resolveTypeName(ManagedType<?> managedType) {
+    private String resolveManagedTypeName(ManagedType<?> managedType) {
         String typeName = "";
 
         if (managedType instanceof EmbeddableType) {
             typeName = managedType.getJavaType().getSimpleName();
-        } else if (managedType instanceof EntityType) {
-            typeName = ((EntityType<?>) managedType).getName();
+        } else if (managedType instanceof EntityType<?> entityType) {
+            typeName = entityType.getName();
         }
 
         return typeName;
@@ -611,9 +635,9 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
     }
 
     private String resolveWhereInputTypeName(ManagedType<?> managedType) {
-        String typeName = resolveTypeName(managedType);
+        String typeName = resolveManagedTypeName(managedType);
 
-        return namingStrategy.pluralize(typeName) + "RelationCriteriaExpression";
+        return pluralize.andThen(queryWhereInputTypeNameCustomizer).apply(typeName);
     }
 
     private GraphQLInputObjectType computeWhereInputType(ManagedType<?> managedType) {
@@ -1000,7 +1024,10 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
                 return embeddableOutputCache.get(embeddableType.getJavaType());
             }
             String embeddableTypeName =
-                namingStrategy.singularize(embeddableType.getJavaType().getSimpleName()) + "EmbeddableType";
+                singularize
+                    .andThen(queryEmbeddableTypeNameCustomizer)
+                    .apply(embeddableType.getJavaType().getSimpleName());
+
             graphQLType =
                 GraphQLObjectType
                     .newObject()
@@ -1020,14 +1047,21 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
         return graphQLType;
     }
 
-    private GraphQLObjectType getObjectType(EntityType<?> entityType) {
-        return entityCache.computeIfAbsent(entityType, this::computeObjectType);
+    private GraphQLObjectType getEntityObjectType(EntityType<?> entityType) {
+        return entityCache.computeIfAbsent(entityType, this::computeEntityObjectType);
     }
 
-    private GraphQLObjectType computeObjectType(EntityType<?> entityType) {
+    private String resolveEntityObjectTypeName(EntityType<?> entityType) {
+        var entityTypeName = resolveManagedTypeName(entityType);
+
+        return singularize.andThen(queryResultTypeNameCustomizer).apply(entityTypeName);
+    }
+
+    private GraphQLObjectType computeEntityObjectType(EntityType<?> entityType) {
+        var typeName = resolveEntityObjectTypeName(entityType);
         return GraphQLObjectType
             .newObject()
-            .name(entityType.getName())
+            .name(typeName)
             .description(getSchemaDescription(entityType))
             .fields(getEntityAttributesFields(entityType))
             .fields(getTransientFields(entityType))
@@ -1111,20 +1145,21 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
             // to-one end could be optional
             arguments.add(optionalArgument(singularAttribute.isOptional()));
 
-            GraphQLObjectType entityObjectType = GraphQLObjectType.newObject().name(baseEntity.getName()).build();
+            GraphQLObjectType entityObjectType = GraphQLObjectType.newObject().name(resolveEntityObjectTypeName(baseEntity)).build();
 
             GraphQLJpaQueryFactory graphQLJpaQueryFactory = GraphQLJpaQueryFactory
                 .builder()
                 .withEntityManager(entityManager)
                 .withEntityType(baseEntity)
+                .withEntityObjectTypeResolver(entityObjectTypeResolver)
                 .withEntityObjectType(entityObjectType)
-                .withSelectNodeName(entityObjectType.getName())
+                .withSelectNodeName(baseEntity.getName())
                 .withDefaultDistinct(isDefaultDistinct)
                 .withRestrictedKeysProvider(restrictedKeysProvider)
                 .withResultStream(enableResultStream)
                 .build();
 
-            String dataLoaderKey = baseEntity.getName() + "." + attribute.getName();
+            String dataLoaderKey = entityObjectType.getName() + "." + attribute.getName();
 
             MappedBatchLoaderWithContext<Object, Object> mappedBatchLoader = new GraphQLJpaToOneMappedBatchLoader(
                 graphQLJpaQueryFactory
@@ -1152,20 +1187,21 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
             // make it configurable via builder api
             arguments.add(optionalArgument(toManyDefaultOptional));
 
-            GraphQLObjectType entityObjectType = GraphQLObjectType.newObject().name(baseEntity.getName()).build();
+            GraphQLObjectType entityObjectType = GraphQLObjectType.newObject().name(resolveEntityObjectTypeName(baseEntity)).build();
 
             GraphQLJpaQueryFactory graphQLJpaQueryFactory = GraphQLJpaQueryFactory
                 .builder()
                 .withEntityManager(entityManager)
                 .withEntityType(baseEntity)
+                .withEntityObjectTypeResolver(entityObjectTypeResolver)
                 .withEntityObjectType(entityObjectType)
-                .withSelectNodeName(entityObjectType.getName())
+                .withSelectNodeName(baseEntity.getName())
                 .withDefaultDistinct(isDefaultDistinct)
                 .withRestrictedKeysProvider(restrictedKeysProvider)
                 .withResultStream(enableResultStream)
                 .build();
 
-            String dataLoaderKey = baseEntity.getName() + "." + attribute.getName();
+            String dataLoaderKey = entityObjectType.getName() + "." + attribute.getName();
 
             MappedBatchLoaderWithContext<Object, List<Object>> mappedBatchLoader = new GraphQLJpaToManyMappedBatchLoader(
                 graphQLJpaQueryFactory
@@ -1258,11 +1294,11 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
 
             return input
                 ? getWhereInputType(foreignType)
-                : new GraphQLList(new GraphQLTypeReference(foreignType.getName()));
+                : new GraphQLList(new GraphQLTypeReference(resolveEntityObjectTypeName(foreignType)));
         } else if (isToOne(attribute)) {
             EntityType foreignType = (EntityType) ((SingularAttribute) attribute).getType();
 
-            return input ? getWhereInputType(foreignType) : new GraphQLTypeReference(foreignType.getName());
+            return input ? getWhereInputType(foreignType) : new GraphQLTypeReference(resolveEntityObjectTypeName(foreignType));
         } else if (isElementCollection(attribute)) {
             Type foreignType = ((PluralAttribute) attribute).getElementType();
 
@@ -1563,6 +1599,54 @@ public class GraphQLJpaSchemaBuilder implements GraphQLSchemaBuilder {
         Assert.assertNotNull(path, () -> "path is null");
 
         entityPaths.add(path);
+
+        return this;
+    }
+
+    public GraphQLJpaSchemaBuilder queryByIdFieldNameCustomizer(Function<String, String> queryByIdFieldNameCustomizer) {
+        this.queryByIdFieldNameCustomizer = queryByIdFieldNameCustomizer;
+
+        return this;
+    }
+
+    public GraphQLJpaSchemaBuilder queryAllFieldNameCustomizer(Function<String, String> queryAllFieldNameCustomizer) {
+        this.queryAllFieldNameCustomizer = queryAllFieldNameCustomizer;
+
+        return this;
+    }
+
+    public GraphQLJpaSchemaBuilder queryTypeNameCustomizer(Function<String, String> queryTypeNameCustomizer) {
+        this.queryTypeNameCustomizer = queryTypeNameCustomizer;
+
+        return this;
+    }
+
+    public GraphQLJpaSchemaBuilder queryResultTypeNameCustomizer(Function<String, String> queryResultTypeNameCustomizer) {
+        this.queryResultTypeNameCustomizer = queryResultTypeNameCustomizer;
+
+        return this;
+    }
+
+    public GraphQLJpaSchemaBuilder queryWhereArgumentTypeNameCustomizer(Function<String, String> queryWhereArgumentTypeNameCustomizer) {
+        this.queryWhereArgumentTypeNameCustomizer = queryWhereArgumentTypeNameCustomizer;
+
+        return this;
+    }
+
+    public GraphQLJpaSchemaBuilder queryEmbeddableTypeNameCustomizer(Function<String, String> queryEmbeddableTypeNameCustomizer) {
+        this.queryEmbeddableTypeNameCustomizer = queryEmbeddableTypeNameCustomizer;
+
+        return this;
+    }
+
+    public GraphQLJpaSchemaBuilder subqueryArgumentTypeNameCustomizer(Function<String, String> subqueryArgumentTypeNameCustomizer) {
+        this.subqueryArgumentTypeNameCustomizer = subqueryArgumentTypeNameCustomizer;
+
+        return this;
+    }
+
+    public GraphQLJpaSchemaBuilder queryWhereInputTypeNameCustomizer(Function<String, String> queryWhereInputTypeNameCustomizer) {
+        this.queryWhereInputTypeNameCustomizer = queryWhereInputTypeNameCustomizer;
 
         return this;
     }
